[package]
name = "atom_state"
version = "0.1.0"
authors = ["rebo"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

slotmap = "0.4.0"
anymap = "0.12.1" 
illicit = "0.9.2"
typemap = "0.3.3"
atom_macros = {path="./macro"}
# wasm-bindgen = "^0.2.62"
seed = "0.7.0"
topo = "=0.9.4"
# [dependencies.web-sys]
# version = "^0.3.39"
