[package]
name = "atomic_hooks"
version = "0.1.6"
authors = ["rebo"]
edition = "2018"
description = "Atomic Reative State and Local State Hooks"
license = "Apache-2.0 OR MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

slotmap = "0.4.0"
anymap = "0.12.1" 
illicit = "1.1.0"
typemap = "0.3.3"
# atomic_hooks_macros = "0.1.3"
atomic_hooks_macros = {path = "./macro"}
# atomic_hooks_macros = { git = "https://github.com/rebo/atomic_hooks" }
topo = "=0.13.0"
#  seed = { git = "https://github.com/seed-rs/seed", rev = "0a538f0" }