[package]
name = "atom_macros"
version = "0.1.3"
authors = ["rebo"]
edition = "2018"
autotests = false
description = "Macros for CSS Styling for Seed web apps"
license = "Apache-2.0 OR MIT"


[lib]
proc-macro = true

[[test]]
name = "tests"
path = "tests/progress.rs"
# seed = "0.7.0"
[dev-dependencies]
trybuild = "1.0"
atom_state = {path = "./.."}

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
syn = {version = "1.0.17",  features = ["full","extra-traits"]}
quote = "1.0.3"
proc-macro2 = "1.0.10"
darling = "0.10.2"
illicit = "0.9.2"